hphp/hack/test/typecheck/typing_function1.php.exp
File "typing_function1.php", line 17, characters 8-21:
The builtin `call_user_func` is deprecated. (Typing[4128])
